test/Fail/Issue376Fail.err
Issue376Fail.agda:18.14-18: error: [MetaCannotDependOn]
Cannot instantiate the metavariable _7 to solution fst(z) , snd(z)
since it contains the variable snd(z)
which is not in scope of the metavariable
when checking that the expression refl has type
_7 (A = A) (B = B) (fst z) ≡ z
